--- a/B2W6O1 - Lingo/Lingo.css
+++ b/B2W6O1 - Lingo/Lingo.css
@@ -1,43 +1,19 @@
 body {
-    background-color: green;
+    background: green;
 }
 
 .speelbord {
-    background-color: white;
-    
-    margin-left: 12cm;
-    margin-right: 12cm;
-    margin-top: 2cm;
-
-    padding-bottom: 2cm;
-}
-
-#input {
+    background-color: gray;
     text-align: center;
-    position: relative;
-    top: 10px;
+
+    margin-left: 10cm;
+    margin-right: 10cm;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
-.square {
-    border: 1px black solid;
-    border-radius: 5px;
-    display: inline-block;
-    height: 1.25em;
-    width: 1.25em;
-    text-align: center;
-    font-size: 3.5em;
-    font-family: 'Lato', sans-serif;
-
-    position: relative;
-    top: 20px;
-    left: 30px;
-}
-
-#Start {
-    position: relative;
-    left: 16.5cm;
-    bottom: 1cm;
-
+button {
     width: 100px;
-    height: 30px;
+    height: 50px;
 }
+
